--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -115,12 +115,10 @@ main {
       overflow: hidden;
       cursor: pointer;
       &:first-child,
+      &:nth-child(5),
       &:nth-child(7),
       &:nth-child(10) {
-        grid-column: 1 / 3;
-      }
-      &:nth-child(5) {
-        grid-column: 2 / -2;
+        span 2;
       }
       img {
         &:hover {
